--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "Advent of Code (2021)",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest ./tests",
     "lint": "eslint ./src",
     "day:1": "ts-node src/day1/index.ts",
-    "day:2": "ts-node src/day2/index.ts"
+    "day:2": "ts-node src/day2/index.ts",
+    "day:3": "ts-node src/day3/index.ts"
   },
   "repository": {
     "type": "git",
